2000-06-02  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-calendar.el (mhc-calendar-hnf-summary-insert): hnf's 'CAT' support.

2000-06-01  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* emacs/mhc-calendar.el (mhc-calendar-hnf-summary-insert): Avoid summary insertion when no heading is found.

2000-06-01  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-calendar.el (mhc-calendar-hnf-face-setup): Do ditto mhc-face-setup.
	(mhc-calendar-hnf-edit): Call hnf-initial-function like hns.
	(mhc-calendar-hnf-mark-diary-entries): Fatal bug fix ^^;
	(mhc-calendar-hnf-summary-insert): More colorful, but i have no knowledge of hnf.
	
2000-05-31  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc.el (mhc-sync): New function.
	Bind mhc-sync process coding-system. Ignore illegal passwd request.

	* emacs/mhc-calendar.el: Display Hyper Nikki System's title in summary view.

2000-05-31  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): 
	Set `wl-summary-buffer-name' as local variable.

	* icons: New directory.

	* icons/Anniversary.xbm, icons/Anniversary.xpm, icons/Birthday.xbm,
	icons/Birthday.xpm, icons/Business.xbm, icons/Business.xpm,
	icons/Holiday.xbm, icons/Holiday.xpm, icons/Other.xbm,
	icons/Other.xpm, icons/Private.xbm, icons/Private.xpm,
	icons/Vacation.xbm, icons/Vacation.xpm: New files (Sample icons).

	* emacs/mhc-xmas.el: Added copyright notice.

	* emacs/mhc-bm.el: Ditto.

	* emacs/mhc.el (toplevel): Require 'mhc-xmas on XEmacs.
	Require 'mhc-bm if bitmap is installed.
	(mhc-use-icon-p): New function.
	(mhc-use-icon): New user option.
	(mhc-icon-path): New user option.
	(mhc-scan-month): Call `mhc-icon-setup' if `mhc-use-icon-p' returns t.
	(mhc-sch-scan1): Display icon (Use `mhc-put-icon' and `mhc-get-icon').
	(mhc-scan-month): Set `wl-summary-buffer-name' to avoid treating MHC
	buffer as sticky.

	* emacs/mhc-xmas.el: New module.

	* emacs/mhc-bm.el: Ditto.
